# SortingVisualizer

./: .gitignore  CMakeLists.txt  README.md  graphics.c  graphics.h  main.c  menu.c  menu.h  readme.md  sorting.c  sorting.h  types.h
