cmake_minimum_required(VERSION 3.8)
project(SortingVisualizer)
add_executable(SortingVisualizer main.c graphics.c graphics.h sorting.h types.h sorting.c menu.h menu.c)
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_FLAGS  "-Wall -Wextra -Wpedantic -Wno-language-extension-token" )
target_include_directories( SortingVisualizer PUBLIC "SDL2/include/" )
target_link_directories(SortingVisualizer PUBLIC "SDL2/lib/")
target_link_libraries(SortingVisualizer PUBLIC "libSDL2")
